<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context=".EditTodoFragment">

    <EditText
        android:id="@+id/edit_txt_title"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_margin="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_Title"
        android:inputType="textPersonName"
        android:paddingTop="0dp"
        android:textColor="@color/design_default_color_background"
        android:textColorHint="#FFFEFE"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_txt_description"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="10sp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_Description"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#FBFBFB"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_txt_date"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_margin="10sp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_date"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#F8F6F6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="5sp"
        android:text="@string/edit_priority"
        android:textColor="@color/white"
        android:textColorHint="#FDFBFB" />

    <RadioGroup
        android:id="@+id/edit_rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edit_rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="#0278ae"
            android:text="@string/edit_medium"
            android:textColor="#FAF9F9"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/edit_rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="#cdc733"
            android:text="@string/edit_high"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/edit_rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="#d44000"
            android:text="@string/edit_low"
            android:textColor="#FFFEFE"
            android:textStyle="bold" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/edit_chk_iscomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"

        android:layout_weight="0"
        android:text="@string/edit_is_complete"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:buttonTint="@color/white" />
    android:textColorHint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/loginroundbutton"
            android:text="@string/edit_save"
            android:textColor="@color/white"

            android:textStyle="bold" />

        <Button
            android:id="@+id/edit_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@drawable/loginroundcancel"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>