<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b9ebcf"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/ic_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <TextView-->
<!--            android:id="@+id/splash_lbl_login"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="50dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/login_login"-->
<!--            android:textSize="24sp" />-->

<!--        <EditText-->
<!--            android:id="@+id/splash_txt_username"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="50dp"-->
<!--            android:layout_marginRight="50dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:layout_weight="1"-->
<!--            android:ems="10"-->
<!--            android:inputType="textPersonName" />-->

<!--        <EditText-->
<!--            android:id="@+id/splash_txt_password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="50dp"-->
<!--            android:layout_marginRight="50dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:layout_weight="1"-->
<!--            android:ems="10"-->
<!--            android:inputType="textPassword" />-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginLeft="50dp"-->
<!--            android:layout_marginRight="50dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:layout_weight="1"-->
<!--            android:orientation="horizontal">-->

<!--            <Button-->
<!--                android:id="@+id/splash_btn_login"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/login_signin" />-->

<!--            <Button-->
<!--                android:id="@+id/splash_btn_cancel"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/login_cancel" />-->

<!--        </LinearLayout>-->


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieimg"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:layout_below="@id/mytext"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"

            app:lottie_rawRes="@raw/login" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"

            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/bungee_inline"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textColor="#306DF8"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:gravity="center"
                    android:text="Please use your credentials in order to proceed"
                    android:textColor="#7A8089"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/splash_txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Enter Your Name"
                    android:inputType="textPersonName"
                    android:textCursorDrawable="@android:drawable/ic_menu_edit" />

                <EditText
                    android:id="@+id/splash_txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Enter Your Password"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@android:drawable/ic_menu_edit" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/splash_btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/loginroundbutton"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"></Button>

                    <Button
                        android:id="@+id/splash_btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/loginroundcancel"
                        android:text="@string/cancel"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/fab_background"></Button>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>